--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 .header-container{
     display: flex;
@@ -46,4 +46,4 @@
 .home-login-container:hover {
     background-color: white;
     color: #1c3c7d;
-}
+}*/
