--- a/frontend/src/components/Footer/footer.style.css
+++ b/frontend/src/components/Footer/footer.style.css
@@ -1,15 +1,10 @@
-.footer{
-    background-color: #ffffff !important; 
-    border-top: 1px solid rgb(33, 33, 33) ;
+
+.footer-link {
+  color: var(--bs-link-color);
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
 }
 
-
-
-.list-unstyled a{
-    color: black;
-    text-decoration: none;
-}
-
-.social-icons a {
-    color: black;
+.footer-link:hover {
+  color: var(--bs-link-hover-color);
 }
