--- a/frontend/src/components/Header/header.style.css
+++ b/frontend/src/components/Header/header.style.css
@@ -1,6 +1,7 @@
 .header {
     min-height: 100px;
     border-bottom: 1px solid var(--bs-border-color);
+    background-color: var(--bs-body-bg); 
 }
 
 .header .container {
