--- a/frontend/src/components/Header/header.style.css
+++ b/frontend/src/components/Header/header.style.css
@@ -25,10 +25,29 @@
     letter-spacing: 1px;
     margin: 0 0.5rem;
     color: var(--bs-nav-link-color);
+    position: relative;
+    padding-bottom: 0.5rem;
+}
+
+.header .navbar-nav .nav-link span::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--bs-nav-link-color);
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s ease-in-out;
 }
 
 .header .navbar-nav .nav-link:hover {
     color: var(--bs-nav-link-hover-color);
+}
+
+.header .navbar-nav .nav-link:hover span::after {
+    transform: scaleX(1);
 }
 
 
