--- a/frontend/src/components/ProductCard/ProductCard.css
+++ b/frontend/src/components/ProductCard/ProductCard.css
@@ -1,5 +1,29 @@
+
 .product-card-img {
-  width: 100%;
-  height: 1000px; /* O la altura que prefieras */
-  object-fit: cover; /* Esto evita que la imagen se estire o deforme */
+  height: 400px; 
+  object-fit: cover;
+}
+
+.card-buttons-overlay {
+  display: flex;
+  gap: 10px; 
+  padding-top: 1rem; 
+
+  visibility: hidden;
+  opacity: 0;
+  
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+}
+
+.product-card:hover .card-buttons-overlay {
+  visibility: visible;
+  opacity: 1;
+}
+
+.card-button {
+  flex: 1; 
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 0 !important; 
+  padding: 0.75rem 0; 
 }
